--- a/index.html
+++ b/index.html
@@ -960,10 +960,11 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
                     <div class="settings-item">
                         <span class="settings-label">Export All Data</span>
                         <button class="btn-settings" id="btn-export-data">Export</button>
-                        <span class="settings-label">Try to Recover Data</span>
-                        <button class="btn-settings" id="btn-recover-data">Recovery</button>
                     </div>
-
+                    <div class="settings-item">
+                        <span class="settings-label">Data Recovery Mode</span>
+                        <button class="btn-settings" id="btn-recover-data">Activate</button>
+                    </div>
                 </div>
 
                 <!-- App Configuration -->
