--- a/index.html
+++ b/index.html
@@ -979,6 +979,12 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
                             <option value="2.0">Maximum</option>
                         </select>
                     </div>
+                    <div class="settings-item">
+                    <span class="settings-label">Hide Crew Duty Data (Journey Log)</span>
+                        <div class="settings-item">
+                            <input type="checkbox" id="hide-all-duty">
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Dangerous Zone -->
@@ -1005,6 +1011,6 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
 <script src="pdf-lib.min.js"></script>
 <script src="pdf.min.js"></script>
 <script src="signature_pad.umd.min.js"></script>
-<script src="efb-log-pro.js?v=1.8"></script>
+<script src="efb-log-pro.js?v=1.9"></script>
 </body>
 </html>
