--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 .upload-overlay {
     position: fixed;
     top: 0;
-    left: 200px; /* Sidebar width */
+    left: 200px;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.9);
+    background: var(--bg); 
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 9998;
-    backdrop-filter: blur(5px);
+    backdrop-filter: none; 
     animation: fadeIn 0.3s ease;
 }
 
@@ -106,7 +106,7 @@
 #sig-canvas {
     width: 100%;
     height: 200px; /* Fixed height for the pad */
-    background: var(--input); /* Matches your theme */
+    background: var(--input);
     display: block;
     border: 1px solid var(--border);
     border-radius: 12px;
@@ -125,11 +125,11 @@
 :root {
     --bg:#000; --sidebar:#111; --panel:#1c1c1e; --accent:#0a84ff;
     --text:#fff; --dim:#8e8e93; --border:#38383a; --input:#2c2c2e;
-    --success:#32d74b; --error:#ff453a;
+    --success:#32d74b; --error:#ff453a; --accent-rgb: 10, 132, 255;
 }
 [data-theme="light"] {
     --bg:#f2f2f7; --sidebar:#fff; --panel:#fff; --accent:#007aff;
-    --text:#000; --dim:#636366; --border:#d1d1d6; --input:#f2f2f7;
+    --text:#000; --dim:#636366; --border:#d1d1d6; --input:#f2f2f7; --accent-rgb: 0, 122, 255;
 }
 
 *{box-sizing:border-box;-webkit-tap-highlight-color:transparent}
@@ -168,6 +168,14 @@ html,body{margin:0;width:100%;height:100%;font-family:-apple-system,system-ui,sa
 
 .sidebar {
     padding-bottom: env(safe-area-inset-bottom);
+}
+
+.input-checkbox {
+    width: 20px;
+    height: 20px;
+    accent-color: var(--accent);
+    border-radius: 6px;
+    cursor: pointer;
 }
 
 /* FIXED COMPONENTS (Never scroll) */
@@ -308,7 +316,7 @@ table .input {
     -webkit-overflow-scrolling: touch; 
 }
 .table-container input.input {
-    background: var(--input); /* Changed to var(--input) to look better in both modes */
+    background: var(--input);
     color: var(--text);
     border: 1px solid var(--border);
 }
@@ -335,7 +343,7 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
 @keyframes fadeIn{from{opacity:0;transform:translateY(5px)}to{opacity:1;transform:none}}
 
 .btn-icon {
-    background: #e5e5ea; /* Light grey iOS style */
+    background: #e5e5ea;
     border: none;
     border-radius: 50%;
     width: 30px;
@@ -355,6 +363,105 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
     color: white;
 }
 
+/* Button variants for OFP Manager */
+.btn-action.primary {
+    background: var(--accent);
+    color: white;
+}
+
+.btn-action.primary:hover {
+    background: #0066cc; /* Darker shade */
+}
+
+/* Icon button variants – circular, colored by action */
+.btn-icon.activate,
+.btn-icon.edit {
+    background: var(--accent);
+    color: white;
+}
+
+.btn-icon.delete {
+    background: var(--error);
+    color: white;
+}
+
+.btn-icon.download {
+    background: var(--dim);
+    color: white;
+}
+
+.btn-icon.activate:disabled,
+.btn-icon.edit:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+/* Status badges */
+.status-badge {
+    padding: 4px 8px;
+    border-radius: 12px;
+    font-size: 12px;
+    font-weight: 600;
+    display: inline-block;
+}
+
+.status-active {
+    background: var(--success);
+    color: white;
+}
+
+.status-inactive {
+    background: var(--dim);
+    color: white;
+}
+
+.status-finalized {
+    background: var(--dim);
+    color: white;
+    padding: 4px 8px;
+    border-radius: 12px;
+    font-size: 12px;
+    font-weight: 600;
+    display: inline-block;
+}
+
+/* Active row highlight */
+.active-ofp-row {
+    background: rgba(var(--accent-rgb), 0.1);
+    border-left: 4px solid var(--accent);
+}
+
+/* Table enhancements */
+#ofp-manager-table td {
+    vertical-align: middle;
+}
+
+#ofp-manager-table .btn-icon {
+    margin: 0 2px;
+}
+
+/* Search/filter box */
+.ofp-search {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 15px;
+}
+
+.ofp-search-input {
+    flex: 1;
+    padding: 12px 16px;
+    border-radius: 10px;
+    border: 1px solid var(--border);
+    background: var(--input);
+    color: var(--text);
+    font-size: 16px;
+}
+
+.ofp-search-input:focus {
+    border-color: var(--accent);
+    outline: none;
+}
+
 .modify { background-color: #007aff; } /* Apple Blue */
 .delete { background-color: #ff3b30; } /* Apple Red */
 
@@ -364,7 +471,7 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
     padding: 10px 5px; /* Aligned with buttons */
     margin-bottom: 10px;
     border-bottom: 1px solid var(--border);
-    background: transparent; /* No more ugly white box */
+    background: transparent;
 }
 
 
@@ -552,7 +659,7 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
     <aside class="sidebar">
         <div class="sidebar-header">EFB Log Pro</span></div>
     <div class="nav-menu">
-        <button class="nav-btn active" data-tab="summary">Flight Summary</button>
+        <button class="nav-btn" data-tab="summary">Flight Summary</button>
         <button class="nav-btn" data-tab="weights-fuel">Weights & Fuel</button>
         <button class="nav-btn" data-tab="log">Flight Log</button>
         <button class="nav-btn" data-tab="altn">Alternate Route</button>
@@ -560,17 +667,56 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
         <button class="nav-btn" data-tab="notams">NOTAMS</button>
         <button class="nav-btn" data-tab="paper">Paper Flight Plan</button>
         <button class="nav-btn" data-tab="journey">Journey Log</button>
-        <button class="nav-btn" data-tab="confirm">OFP Confirm</button>
+        <button class="nav-btn" data-tab="confirm">Finalize OFP</button>
+        <button class="nav-btn" data-tab="sectors">OFP Manager</button>
         <button class="nav-btn" data-tab="settings">Settings</button>
     </div>
         <div class="sidebar-footer">
             <button class="theme-toggle" onclick="toggleTheme()">Day/Night</button>
         </div>
     </aside>
-<input type="file" id="ofp-file-in" style="display:none">
+<input type="file" id="ofp-file-in" style="display:none" multiple accept=".pdf">
 
     <main class="main-content">
-        <section id="section-summary" class="tool-section active">
+        <section id="section-sectors" class="tool-section">
+            <div class="ofp-search" style="margin-bottom: 15px;">
+                <input type="text" id="ofp-search-input" class="input" 
+                    placeholder="🔍 Filter by flight, date, departure or destination..." 
+                    oninput="filterOFPs()">
+            </div>
+            
+            <div class="table-container">
+                <table id="ofp-manager-table">
+                    <thead>
+                        <tr>
+                            <th>Flight</th>
+                            <th>Date</th>
+                            <th>Departure</th>
+                            <th>Destination</th>
+                            <th>Trip</th>
+                            <th>Max SR</th>
+                            <th>Request #</th>
+                            <th>Status</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="ofp-manager-tbody">
+                        <!-- dynamic content -->
+                    </tbody>
+                </table>
+            </div>
+            <div class="btn-group" style="margin-top: 20px;">
+                <button onclick="document.getElementById('ofp-file-in').click()" 
+                        class="btn btn-save">
+                    📁 Upload New OFP
+                </button>
+                <button onclick="clearAllOFPs()" 
+                        class="btn btn-danger">
+                    🗑️ Clear All
+                </button>
+            </div>
+        </section>
+        <section id="section-summary" class="tool-section">
 
             <div class="panel">
                 <div class="grid-row">
@@ -980,9 +1126,15 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
                         </select>
                     </div>
                     <div class="settings-item">
+                        <span class="settings-label">Auto‑activate next OFP after finalize</span>
+                        <div class="settings-input-group">
+                            <input type="checkbox" id="auto-activate-next" class="input-checkbox">
+                        </div>
+                    </div>
+                    <div class="settings-item">
                     <span class="settings-label">Hide Crew Duty Data (Journey Log)</span>
                         <div class="settings-item">
-                            <input type="checkbox" id="hide-all-duty">
+                            <input type="checkbox" id="hide-all-duty" class="input-checkbox">
                         </div>
                     </div>
                 </div>
@@ -1001,6 +1153,17 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
             </div>
         </div>
     </div>
+    <div id="upload-progress-modal" style="display:none; position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(0,0,0,0.7); z-index:10000; backdrop-filter:blur(3px);">
+        <div style="position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); background:var(--panel); border-radius:16px; padding:30px; max-width:400px; width:90%; border:1px solid var(--border);">
+            <h3 style="margin:0 0 20px; color:var(--accent);">📤 Uploading OFPs</h3>
+            <div id="upload-progress-text" style="color:var(--text); margin-bottom:15px;">Processing 0 of 0...</div>
+            <div style="height:8px; background:var(--input); border-radius:4px; overflow:hidden; margin-bottom:10px;">
+                <div id="upload-progress-bar" style="width:0%; height:100%; background:var(--accent); transition:width 0.2s;"></div>
+            </div>
+            <div id="upload-progress-detail" style="color:var(--dim); font-size:13px; max-height:200px; overflow-y:auto; padding-right:5px;"></div>
+            <button id="upload-progress-close" style="margin-top:20px; width:100%; padding:12px; background:var(--accent); border:none; color:white; border-radius:10px; font-weight:bold; cursor:pointer; display:none;">Close</button>
+        </div>
+    </div>
     </main>
 </div>
 <script>
@@ -1011,6 +1174,6 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
 <script src="pdf-lib.min.js"></script>
 <script src="pdf.min.js"></script>
 <script src="signature_pad.umd.min.js"></script>
-<script src="efb-log-pro.js?v=1.9"></script>
+<script src="efb-log-pro.js?v=2.0"></script>
 </body>
 </html>
