--- a/index.html
+++ b/index.html
@@ -647,10 +647,10 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
 <div id="upload-overlay" class="upload-overlay hidden">
     <button class="upload-center-btn" onclick="document.getElementById('ofp-file-in').click()">
         📁
-        <span>Upload OFP</span>
+        <span>Upload OFPs</span>
     </button>
     <div style="position: absolute; bottom: 50px; color: var(--dim); text-align: center; width: 100%;">
-        <p>Drop PDF file anywhere or click to browse</p>
+        <p>Drop multiple OFPs anywhere or click to browse</p>
         <p style="font-size: 12px; margin-top: 5px;">Support questions janri.kallas@gmail.com</p>
     </div>
 </div>
@@ -817,6 +817,7 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
                     <tr>
                         <th style="min-width:60px">WAYPOINT</th>
                         <th style="width:50px">AWY</th>
+                        <th style="width:40px">SR</th>
                         <th style="width:40px">FL</th>
                         <th style="width:40px">TRK</th>
                         <th style="width:60px">WIND</th>
@@ -848,6 +849,7 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
                     <tr>
                         <th style="min-width:60px">WAYPOINT</th>
                         <th style="width:50px">AWY</th>
+                        <th style="width:40px">SR</th>
                         <th style="width:40px">FL</th>
                         <th style="width:40px">TRK</th>
                         <th style="width:60px">WIND</th>
@@ -1021,6 +1023,7 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
     <select id="j-template-rows" style="padding:8px; border-radius:8px; background:var(--input); color:var(--text); border:1px solid var(--border);">
         <option value="3">3 Rows</option>
         <option value="4" selected>4 Rows (Standard)</option>
+        <option value="5" selected>5 Rows</option>
         <option value="6">6 Rows</option>
     </select>
 </div>
@@ -1062,7 +1065,12 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
                     <h4>ℹ️ App Information</h4>
                     <div class="settings-item">
                         <span class="settings-label">Version</span>
-                        <span id="settings-version" class="settings-value">v1.3</span>
+                        <div style="display: flex; align-items: center; gap: 10px;">
+                            <span id="settings-version" class="settings-value">-</span>
+                            <button id="btn-release-notes" class="btn-settings" style="padding: 4px 12px; font-size: 12px;">
+                                📋 Release Notes
+                            </button>
+                        </div>
                     </div>
                     <div class="settings-item">
                         <span class="settings-label">Last Updated</span>
@@ -1174,6 +1182,6 @@ canvas{width:100%;height:200px;background:#fff;border-radius:12px;border:1px sol
 <script src="pdf-lib.min.js"></script>
 <script src="pdf.min.js"></script>
 <script src="signature_pad.umd.min.js"></script>
-<script src="efb-log-pro.js?v=2.0"></script>
+<script src="efb-log-pro.js?v=2.0.1"></script>
 </body>
 </html>
