--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@ button:disabled,
                         <button class="btn-settings" id="btn-view-audit">View</button>
                     </div>
                     <div class="settings-item">
-                        <span class="settings-label">Auto-lock after</span>
+                        <span class="settings-label">Auto-lock</span>
                         <select id="auto-lock-time" class="settings-select">
                             <option value="5">5 minutes</option>
                             <option value="15" selected>15 minutes</option>
@@ -1257,6 +1257,6 @@ button:disabled,
 <script src="pdf-lib.min.js"></script>
 <script src="pdf.min.js"></script>
 <script src="signature_pad.umd.min.js"></script>
-<script src="efb-log-pro.js?v=2.0.4"></script>
+<script src="efb-log-pro.js?v=2.0.3"></script>
 </body>
 </html>
