--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@ button:disabled,
     </button>
 </div>
 <div style="margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
-    <label style="color:var(--text); font-size:14px;">PDF Rows:</label>
+    <label style="color:var(--text); font-size:14px;">Journey log rows:</label>
     <select id="j-template-rows" style="padding:8px; border-radius:8px; background:var(--input); color:var(--text); border:1px solid var(--border);">
         <option value="3">3 Rows</option>
         <option value="4" selected>4 Rows (Standard)</option>
